# data_agent_ia_01

./: .env.template  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODING_STANDARDS.md  COMMIT_MESSAGE.txt  DEPLOYMENT_GUIDE.md  LICENSE  MANIFEST.in  README.md  SECURITY_AUDIT_COMPLETE.md  STRUCTURE.md  deploy_docs.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_agent.py  setup.py  sitemap.xml  start_docs.sh  test_current_state.py
api/specialists/: index.html
architecture/agent-flow/: index.html
architecture/clean-architecture/: index.html
architecture/rag-explained/: index.html
archive/: ARCHIVE_STATUS.md  COLOR_FIX_COMPLETE.md  DARK_MODE_FIX_COMPLETE.md  DIAGRAMS_SIMPLIFIED.md  DOCUMENTATION_DIAGRAMS_COMPLETE.md  ROOT_DOCS_CONSOLIDATION_ANALYSIS.md
archive/build_reports/: BUILD_SUMMARY.md  COMPLETE_TESTING_REPORT.md  DOCUMENTATION_REPORT.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATE_REPORT.md  IMPROVEMENTS_PROGRESS.md  MKDOCS_SUCCESS_REPORT.md  REFACTOR_STATUS.md  (+3 more)
databricks_examples/: HDL_Agent_Databricks_Native.py  HDL_Agent_Quick_Start.py
docs/: index.md
dpl_agent_lib/: __init__.py
examples/: README.md  agent_conversation.py  basic_usage.py  databricks_deployment.py  local_chat.py  rag_demo.py
javascripts/: dark-mode-fix.js
scripts/: batch_rag_refactor.py  generate_batch_docs.py  generate_workflow_docs.py  load_knowledge_base.py  setup_venv.sh
search/: search_index.json
tests/: conftest.py
workflow_hdl/: dpl-ingestion-OnTapUserSessions-BR-ABI.json  dpl-ingestion-OnTapUserSessions.json  dpl-ingestion-Orders-BR-ABI.json  dpl-ingestion-Orders.json  dpl-ingestion-PartnerGroups.json  dpl-ingestion-UserProductCatalog-BR-ABI.json  dpl-ingestion-UserProductCatalog.json  dpl-ingestion-activity-staging.json  dpl-ingestion-identity-authorization.json  dpl-ingestion-identity-metadata.json  dpl-ingestion-identity-user.json  dpl-stream-activitystaging.json  dpl-stream-jobs-quality.json  dpl-stream-offline-orders.json  dpl-stream-orderscartsuggestion.json  dpl-stream-tasks.json  dpl-stream-ucc-elegibility.json  dpl-stream-userclientcatalog.json  dpl-stream-vendorgroups.json  dpl-stream-visits-dly-rt-time.json  dpl-stream-visits-eligibility.json  dpl-stream-visits-sched-hist.json  dpl-stream-visits-sched.json  dpl-stream-visits.json  sharedtables-ingestion.json
(+206 files in other folders)
